rest of endpoints, changes in configuration, getters, setters, exception

--- a/med/src/main/resources/application.properties
+++ b/med/src/main/resources/application.properties
@@ -1,1 +1,11 @@
 spring.application.name=med
+
+# Database
+spring.datasource.url=jdbc:postgresql://localhost:5432/luxmed
+spring.datasource.username=postgres
+spring.datasource.password=hass123
+
+# JPA / Hibernate properties
+spring.jpa.hibernate.ddl-auto=create
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.PostgreSQLDialect
