--- a/med/pom.xml
+++ b/med/pom.xml
@@ -58,6 +58,10 @@
             <artifactId>spring-data-jpa</artifactId>
             <version>3.3.3</version>
         </dependency>
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-groovy-templates</artifactId>
+		</dependency>
     </dependencies>
 
 	<build>
